--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,11 +10,63 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
+  min-height: 100vh;
+  background: linear-gradient(207deg, rgba(106,17,227,0.6970960259103641) 20%, rgba(22,196,218,0.6634825805322129) 47%, rgba(31,195,122,0.7475161939775911) 80%);
+}
+
+.countryFinder-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.countryFinder-header {
+text-transform: uppercase;
+font-size: 26px;
+margin-bottom: 50px;
+color: rgb(238, 231, 231);
 }
 
 #search-box {
   font: inherit;
   padding: 8px;
-  max-width: 320px;
+  min-width: 75vh;
+  max-width: 520px;
   margin-bottom: 16px;
+  background-color: rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 0px 2px 1px rgba(66, 68, 90, 0.44);
+  color: aliceblue;
+  border: none;
+  border-radius: 20px;
 }
+
+::placeholder {
+  color: aliceblue;
+}
+
+.countryFinder-list {
+  list-style: none;
+}
+
+.countryFinder-name {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+text-transform: uppercase;
+font-size: 18px;
+font-weight: bold;
+margin-bottom: 15px;
+color: rgb(238, 231, 231);
+text-align: center;
+background-color: rgba(0, 0, 0, 0.15);
+border-radius: 20px;
+width: 40vw;
+min-height: 5vh;
+}
+
+.countryFinder-flag {
+  display: flex;
+  justify-content: center;
+}
+
